--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
    <children>
-      <TextField fx:id="textinput" layoutX="167.0" layoutY="122.0" prefHeight="58.0" prefWidth="472.0">
+      <TextField fx:id="textinput" layoutX="179.0" layoutY="102.0" prefHeight="58.0" prefWidth="472.0">
          <font>
             <Font size="21.0" />
          </font>
       </TextField>
-      <Text fill="#b82c2c" layoutX="277.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Your ID" wrappingWidth="251.7835693359375">
+      <Text fill="#b82c2c" layoutX="299.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Your ID" wrappingWidth="251.7835693359375">
          <font>
             <Font name="System Bold" size="34.0" />
          </font>
       </Text>
-      <Button fx:id="clickme" layoutX="349.0" layoutY="199.0" mnemonicParsing="false" onAction="#clickButton" text="Click ME" textFill="#23a11e">
+      <ImageView fx:id="imageid" fitHeight="300.0" fitWidth="300.0" layoutX="303.0" layoutY="296.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img2" fitHeight="300.0" fitWidth="300.0" layoutX="275.0" layoutY="267.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="button2" layoutX="256.0" layoutY="180.0" mnemonicParsing="false" onAction="#clickButton2" text="Image" textFill="#24c431">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Label fx:id="showtext" layoutX="193.0" layoutY="277.0" prefHeight="45.0" prefWidth="446.0" textFill="#2c1be7">
+      <Button fx:id="soundbtn" layoutX="442.0" layoutY="180.0" mnemonicParsing="false" onAction="#playSound" text="Play Sound" textFill="#ec2525">
          <font>
-            <Font size="20.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
-      </Label>
-      <ImageView fx:id="imageid" fitHeight="225.0" fitWidth="225.0" layoutX="288.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" />
+      </Button>
    </children>
 </AnchorPane>
